--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -93,6 +93,7 @@
     "@superset-ui/plugin-chart-table": "^0.15.13",
     "@superset-ui/plugin-chart-word-cloud": "^0.15.13",
     "@superset-ui/preset-chart-xy": "^0.15.13",
+    "@superset-ui/plugin-chart-conditional-table": "^0.0.0",
     "@vx/responsive": "^0.0.195",
     "abortcontroller-polyfill": "^1.1.9",
     "antd": "^4.6.6",
