--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,13 +72,13 @@ services:
     environment:
       CYPRESS_CONFIG: "${CYPRESS_CONFIG}"
 
-  superset-node:
-    image: node:12
-    container_name: superset_node
-    command: ["/app/docker/docker-frontend.sh"]
-    env_file: docker/.env
-    depends_on: *superset-depends-on
-    volumes: *superset-volumes
+#  superset-node:
+#    image: node:12
+#    container_name: superset_node
+#    command: ["/app/docker/docker-frontend.sh"]
+#    env_file: docker/.env
+#    depends_on: *superset-depends-on
+#    volumes: *superset-volumes
 
   superset-worker:
     image: *superset-image
